[package]
name = "t2kbfnd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Daemon to handle the fn key and touchbar backlight on t2 macs"
repository = "https://github.com/sharpenedblade/t2kbfnd"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
glob = "0.3.1"
input-linux = "0.7.0"
log = "0.4.22"
simplelog = "0.12.2"
